[workspace]
members = ["internal", "derive", "public"]
resolver = "2"

[workspace.package]
name = "rs-lexer"
version = "0.1.0"
edition = "2021"
authors = ["Morgan Welsch"]
license = "Apache-2.0 or LGPLv3"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/welschmorgan/rs-lexer"
keywords = ["lexical", "analysis", "lexing", "token"]
