[package]
name = "lexer-internal"
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true
description = "Lexer utility structs"

[dependencies]
podstru-internal = { path = "../../pod-macros/internal" }
podstru-derive = { path = "../../pod-macros/derive" }
