[package]
name = "lexer"
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true
description = "Lexer re-exports"

[features]
default = []
derive = ["dep:lexer-derive"]

[dependencies]
lexer-internal = { path = "../internal", version = "0.1.0" }
lexer-derive = { path = "../derive", version = "0.1.0", optional = true }
